add, edit and delete account

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,16 @@
 {
-    "compilerOptions": {  
-      "jsx": "react-jsx",
-      "allowJs": true,
-      "moduleResolution": "node",
-      "outDir": "./dist",
-      "strict": false,
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "paths": {
-        "@bank/*": [
-          "./src/*"
-        ]
-      },
-      "types": ["node", "jest", "@testing-library/jest-dom"],
-    },
-    "include": ["src/**/*"],
+	"compilerOptions": {
+		"jsx": "react-jsx",
+		"allowJs": true,
+		"moduleResolution": "node",
+		"outDir": "./dist",
+		"strict": false,
+		"esModuleInterop": true,
+		"sourceMap": true,
+		"paths": {
+			"@bank/*": ["./src/*"]
+		},
+		"types": ["node", "jest", "@testing-library/jest-dom"]
+	},
+	"include": ["src/**/*"]
 }
