--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "bank",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack --env production",
-    "test": "jest"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.23",
-    "@types/sanitize-html": "^2.11.0",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.2.13",
-    "style-loader": "^3.3.4",
-    "ts-jest": "^29.1.2",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.3",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@mui/x-data-grid": "^7.3.1",
-    "@tanstack/react-query": "^5.28.14",
-    "axios": "^1.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "sanitize-html": "^2.13.0",
-    "tss-react": "^4.9.6"
-  },
-  "msw": {
-    "workerDirectory": [
-      "dist"
-    ]
-  }
+	"name": "bank",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack serve --open",
+		"build": "webpack --env production",
+		"format": "npx prettier --use-tabs -w ./src/*",
+		"test": "jest"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@testing-library/dom": "^9.3.4",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.2",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
+		"@types/react": "^18.2.74",
+		"@types/react-dom": "^18.2.23",
+		"@types/sanitize-html": "^2.11.0",
+		"css-loader": "^6.10.0",
+		"html-webpack-plugin": "^5.6.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"msw": "^2.2.13",
+		"style-loader": "^3.3.4",
+		"ts-jest": "^29.1.2",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.4.3",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@mui/icons-material": "^5.15.15",
+		"@mui/material": "^5.15.15",
+		"@mui/x-data-grid": "^7.3.1",
+		"@tanstack/react-query": "^5.28.14",
+		"axios": "^1.6.8",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.22.3",
+		"sanitize-html": "^2.13.0",
+		"tss-react": "^4.9.6"
+	},
+	"msw": {
+		"workerDirectory": [
+			"dist"
+		]
+	}
 }
