--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.3",
 		"sanitize-html": "^2.13.0",
-		"tss-react": "^4.9.6"
+		"tss-react": "^4.9.6",
+		"yup": "^1.4.0"
 	},
 	"msw": {
 		"workerDirectory": [
